[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ecdnapy"]

[project]
name = "ecdnapy"
version = "0.0.1"
readme = "README.md"
requires-python = ">=3.7"

[project.urls]
"Homepage" = "https://github.com/fraterenz/ecdnapy"

[tool.pytest.ini_options]
addopts = [
  "--import-mode=importlib",
]
