[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ecdnapy"]

[project]
name = "ecdnapy"
version = "0.0.2"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
  "matplotlib",
  "pandas",
  "seaborn",
  "scipy",
  "futils @ git+https://github.com/fraterenz/futils@v0.0.3",
]

[project.urls]
"Homepage" = "https://github.com/fraterenz/ecdnapy"

[tool.pytest.ini_options]
addopts = [
  "--import-mode=importlib",
]
