[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ecdnapy"]

[tool.hatch.metadata]
allow-direct-references = true

[project]
name = "ecdnapy"
version = "0.0.14"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
  "matplotlib",
  "pandas",
  "seaborn",
  "scipy",
  "futils @ git+https://github.com/fraterenz/futils@v0.0.10",
]

[project.urls]
"Homepage" = "https://github.com/fraterenz/ecdnapy"

[tool.pytest.ini_options]
addopts = [
  "--import-mode=importlib",
]
